# menubar_countdown

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
src/: config.rs  countdown.rs  main.rs
